noinst_LTLIBRARIES = liblevel.la

liblevel_la_CPPFLAGS = $(CLANLIB_CFLAGS) $(CPPFLAGS)

liblevel_la_SOURCES = \
		Event.cpp \
		Event.h \
		Graphic.h \
		Level.cpp \
		LevelElements.cpp \
		Level.h \
		MappableObject.cpp \
		MappableObject.h \
		ScriptElement.cpp \
		ScriptElement.h 

INCLUDES = 	-I@top_srcdir@/src/ \
		-I@top_srcdir@/src/abilities \
		-I@top_srcdir@/src/party \
		-I@top_srcdir@/src/factories \
		-I@top_srcdir@/src/items \
		-I@top_srcdir@/src/items/weapons \
		-I@top_srcdir@/src/items/armor \
		-I@top_srcdir@/src/level \
		-I@top_srcdir@/src/character \
		-I@top_srcdir@/src/steel \
		-I@top_srcdir@/src/core/ 

