noinst_LTLIBRARIES = libparty.la

libparty_la_CPPFLAGS = $(CLANLIB_CFLAGS) $(CPPFLAGS)

libparty_la_SOURCES =  \
		IParty.h \
		Makefile.am \
		Party.cpp \
		Party.h 

INCLUDES = 	-I@top_srcdir@/src/ \
		-I@top_srcdir@/src/abilities \
		-I@top_srcdir@/src/level \
		-I@top_srcdir@/src/factories \
		-I@top_srcdir@/src/items \
		-I@top_srcdir@/src/character


